istio/manifests/namespaces/istio-system/Istio/istio-ingressgateway-gateway.yaml
# Source: Istio/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - kiali.lukeaddison.co.uk
        - jackett.lukeaddison.co.uk
        - calibre.lukeaddison.co.uk
        - wiki.lukeaddison.co.uk
        - lazylibrarian.lukeaddison.co.uk
        - alertmanager.lukeaddison.co.uk
        - grafana.lukeaddison.co.uk
        - prometheus.lukeaddison.co.uk
        - radarr.lukeaddison.co.uk
        - sonarr.lukeaddison.co.uk
        - lidarr.lukeaddison.co.uk
        - dippystreams.co.uk
        - requests.dippystreams.co.uk
        - dannyaddison.com
        - www.dannyaddison.com
      tls:
        httpsRedirect: true
    - port:
        number: 8443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: lukeaddison-co-uk-wildcard-tls
      hosts:
        - istio-system/jackett.lukeaddison.co.uk
        - istio-system/wiki.lukeaddison.co.uk
        - istio-system/lazylibrarian.lukeaddison.co.uk
        - istio-system/alertmanager.lukeaddison.co.uk
        - istio-system/grafana.lukeaddison.co.uk
        - istio-system/prometheus.lukeaddison.co.uk
        - istio-system/kiali.lukeaddison.co.uk
        - istio-system/radarr.lukeaddison.co.uk
        - istio-system/sonarr.lukeaddison.co.uk
        - istio-system/lidarr.lukeaddison.co.uk
        - calibre/calibre.lukeaddison.co.uk
        - radarr/api.radarr.lukeaddison.co.uk
        - sonarr/api.sonarr.lukeaddison.co.uk
        - lidarr/api.lidarr.lukeaddison.co.uk
    - port:
        number: 8443
        name: https-plex
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: dippystreams-co-uk-tls
      hosts:
        - plex/dippystreams.co.uk
    - port:
        number: 8443
        name: https-plex-requests
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: requests-dippystreams-co-uk-tls
      hosts:
        - ombi/requests.dippystreams.co.uk
    - port:
        number: 8443
        name: https-danny-wordpress
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: dannyaddison-com-tls
      hosts:
        - wordpress/dannyaddison.com
        - wordpress/www.dannyaddison.com
    - port:
        number: 32400
        name: https-plex-passthrough
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
      hosts:
        - plex/dippystreams.co.uk
